Refactor CSS styles for international, ciencia, saude, and tecnologia pages

--- a/pages/tecnologia.html
+++ b/pages/tecnologia.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tecnologia - ByteNews.com</title>
+    <link rel="stylesheet" href="/Assets/styles/css/stylePages/tecnologia.css">
     <link rel="stylesheet" href="/Assets/styles/css/style.css">
 </head>
 <body>
@@ -22,14 +23,12 @@
         data-item8="Cadastrar E-mail" data-link8="/cadastrar-email" data-hidden8="true" data-id8="modal-cadastar-email-hamburguer"
         data-item9="Pesquisar" data-link9="/pesquisar" data-hidden9="true" data-id9="search"
     ></navbar-tag>
-
     <modal-component 
         id="modal-cadastar-email" 
         title="ByteNews.com" 
         heading="Registrar-se para receber notificações" 
         iconSrc="/Assets/imgs/user.png"
     ></modal-component>
-
     <modal-component-search
         id="modal-search"
         title="Pesquisar Noticias"
@@ -46,77 +45,88 @@
         <article class="article">
             <div class="content-of-the-subject">
                 <div class="container-div">
-                    <div class="image-container">
-                        <img src="/Assets/imgs/h3.png" alt="Imagem ilustrativa da matéria">
-                        <p class="caption">Imagens como esta foram significativamente menos frequentes na China do que no resto do mundo.</p>
+                    <div class="sub-container">
+                        <div class="image-container-um">
+                            <img src="/Assets/imgs/h3.png" alt="Imagem ilustrativa da matéria">
+                            <p class="caption">Imagens como esta foram significativamente menos frequentes na China do que no resto do mundo.</p>
+                        </div>
+                        <div class="text-container text-abixo-img ">
+                            <p>
+                                &nbsp;&nbsp;Enquanto a maior parte do mundo lidava com a temida tela azul da morte na sexta-feira, 
+                                um país que conseguiu escapar em grande parte ileso foi a China.
+                                A razão é bastante simples: o CrowdStrike é pouco utilizado lá. Poucas organizações 
+                                compram software de uma empresa americana que, no passado, tem sido crítica em relação 
+                                à ameaça cibernética representada por Pequim.<br>
+                                &nbsp;&nbsp;Além disso, a China não depende tanto da Microsoft quanto o resto do mundo. Empresas 
+                                domésticas como Alibaba, Tencent e Huawei dominam o setor de serviços em nuvem.
+                                Portanto, os relatos de interrupções na China, quando ocorreram, foram principalmente 
+                                em empresas ou organizações estrangeiras. Em sites de mídia social chineses, por exemplo,
+                                alguns usuários reclamaram que não conseguiam fazer check-in em cadeias internacionais de
+                                hotéis como Sheraton, Marriott e Hyatt nas cidades chinesas.
+                            </p>
+                        </div>
                     </div>
+                </div>
+                <div class="container-div">
+                    <div class="text-container tetxMargin">
+                        <p>
+                            &nbsp;&nbsp;Nos últimos anos, organizações governamentais, empresas e operadores de infraestrutura têm 
+                            substituído cada vez mais os sistemas de TI estrangeiros por nacionais. Alguns analistas 
+                            chamam essa rede paralela de "splinternet".
+                            "É um testemunho da estratégia da China no gerenciamento das operações tecnológicas estrangeiras," 
+                            afirma Josh Kennedy White, um especialista em cibersegurança baseado em Singapura.
+                            "A Microsoft opera na China através de um parceiro local, a 21Vianet, que gerencia seus 
+                            serviços de forma independente da sua infraestrutura global. Esse arranjo isola os serviços 
+                            essenciais da China - como bancos e aviação - de interrupções globais."
+                            Pequim vê a redução da dependência de sistemas estrangeiros como uma forma de fortalecer a 
+                            segurança nacional.
+                            Isso é semelhante à maneira como alguns países ocidentais baniram a tecnologia da empresa 
+                            chinesa Huawei em 2019, ou a decisão do Reino Unido de proibir o uso do TikTok, de 
+                            propriedade chinesa, em dispositivos governamentais em 2023.
+                            Desde então, os Estados Unidos lançaram um esforço concentrado para proibir a venda de 
+                            tecnologias avançadas de chips semicondutores para a China, além de tentar impedir que 
+                            empresas americanas investam em tecnologia chinesa.
+                            "Nunca vivi algo tão aterrorizante. Havia tanta cinza e fuligem dentro dos apartamentos...
+                            Mesmo com tudo fechado. Falei para minha filha: 'Parece que o fogo está aqui dentro'. É difícil respirar".
+                        </p>            
+                    </div>
+                    <div class="container-div-dois" style="margin-top: 2%;">
+                        <div class="sub-container">
+                            <div class="image-container-dois">
+                                <img src="/Assets/imgs/h10.png" alt="Imagem ilustrativa da matéria">
+                                <p class="caption">O aeroporto de Hong Kong sofreu algumas consequências devido à interrupção dos serviços.</p>
+                            </div>
+                            <div class="text-container text-abixo-img">
+                                <p>
+                                    &nbsp;&nbsp;Um editorial publicado no sábado pelo jornal estatal Global Times fez uma referência
+                                    velada àsrestrições impostas à tecnologia chinesa.
+                                    "Alguns países falam constantemente sobre segurança, generalizam o conceito de 
+                                    segurança, mas ignoram a verdadeira segurança; isso é irônico", afirmou o editorial.<br>
+                                    &nbsp;&nbsp;O argumento é que os EUA tentam ditar as regras sobre quem pode usar a tecnologia 
+                                    global e como ela deve ser usada, enquanto uma de suas próprias empresas causou um 
+                                    caos global devido à falta de cuidado.
+                                    O Global Times também criticou os gigantes da internet que "monopolizam" a 
+                                    indústria: "Confiar exclusivamente nas principais empresas para liderar os esforços
+                                    de segurança na rede, como alguns países defendem, pode não apenas prejudicar o compartilhamento.  
+                                    inclusivo dos resultados de governança, mas também introduzir novos riscos de segurança."
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="container-div">
                     <div class="text-container">
                         <p>
-                            Enquanto a maior parte do mundo lidava com a temida tela azul da morte na sexta-feira, um país que conseguiu escapar em grande parte ileso foi a China.<Br>
-                            A razão é bastante simples: o CrowdStrike é pouco utilizado lá. Poucas organizações compram software de uma empresa americana que, no passado, tem sido crítica em relação à ameaça cibernética representada por Pequim.<br>
-                            Além disso, a China não depende tanto da Microsoft quanto o resto do mundo. Empresas domésticas como Alibaba, Tencent e Huawei dominam o setor de serviços em nuvem.<br>
-                            Portanto, os relatos de interrupções na China, quando ocorreram, foram principalmente em empresas ou organizações estrangeiras. Em sites de mídia social chineses, por exemplo, alguns usuários reclamaram que não<br>
-                            conseguiam fazer check-in em cadeias internacionais de hotéis como Sheraton, Marriott e Hyatt nas cidades chinesas.<br>s
+                            &nbsp;&nbsp;A referência ao "compartilhamento" provavelmente alude ao debate sobre propriedade 
+                            intelectual, já que a China é frequentemente acusada de copiar ou roubar tecnologia ocidental. 
+                            Pequim insiste que isso não é o caso e defende um mercado global de tecnologia aberto, 
+                            embora mantenha um controle rigoroso sobre o cenário doméstico. No entanto, nem tudo na China 
+                            ficou totalmente imune. Um pequeno número de trabalhadores expressou agradecimento a um 
+                            gigante do software americano por encerrar sua semana de trabalho mais cedo "Obrigado, Microsoft,
+                            por uma férias antecipada" foi tendência na rede social Weibo na sexta-feira, com usuários 
+                            postando fotos de telas de erro azul.
                         </p>
                     </div>
-                </div>
-                <div class="text-container-body">
-                    <div>
-                        <p>
-                            Nos últimos anos, organizações governamentais, empresas e operadores de infraestrutura têm substituído cada vez mais os sistemas de TI estrangeiros por nacionais. Alguns analistas chamam essa rede paralela de "splinternet".
-                        </p>
-                        <p>
-                            "É um testemunho da estratégia da China no gerenciamento das operações tecnológicas estrangeiras," afirma Josh Kennedy White, um especialista em cibersegurança baseado em Singapura.
-                        </p>
-                        <p>
-                            "A Microsoft opera na China através de um parceiro local, a 21Vianet, que gerencia seus serviços de forma independente da sua infraestrutura global. Esse arranjo isola os serviços essenciais da China - como bancos e aviação - de interrupções globais."
-                        </p>
-                        <p>
-                            Pequim vê a redução da dependência de sistemas estrangeiros como uma forma de fortalecer a segurança nacional.
-                        </p>
-                        <p>
-                            Isso é semelhante à maneira como alguns países ocidentais baniram a tecnologia da empresa chinesa Huawei em 2019, ou a decisão do Reino Unido de proibir o uso do TikTok, de propriedade chinesa, em dispositivos governamentais em 2023.
-                        </p>
-                        <p>
-                            Desde então, os Estados Unidos lançaram um esforço concentrado para proibir a venda de tecnologias avançadas de chips semicondutores para a China, além de tentar impedir que empresas americanas investam em tecnologia chinesa.
-                        </p>
-                        <p>
-                            "Nunca vivi algo tão aterrorizante. Havia tanta cinza e fuligem dentro dos apartamentos...
-                            Mesmo com tudo fechado. Falei para minha filha: 'Parece que o fogo está aqui dentro'. É difícil
-                            respirar".
-                        </p>
-                        <p>
-                            O governo dos EUA afirma que todas essas restrições são motivadas por questões de segurança nacional.
-                        </p>
-                    </div>
-                    <div class="container-div-list" style="margin-top: 2%;">
-                        <div class="image-container">
-                            <img src="/Assets/imgs/h10.png" alt="Imagem ilustrativa da matéria">
-                            <p class="caption">O aeroporto de Hong Kong sofreu algumas consequências devido à interrupção dos serviços.</p>
-                        </div>
-                            <p>
-                                Um editorial publicado no sábado pelo jornal estatal Global Times fez uma referência velada àsrestrições impostas à tecnologia chinesa.<br>
-                                "Alguns países falam constantemente sobre segurança, generalizam o conceito de segurança, mas ignoram a verdadeira segurança; isso é irônico", afirmou o editorial.<br>
-                                O argumento é que os EUA tentam ditar as regras sobre quem pode usar a tecnologia global e como ela deve ser usada, enquanto uma de suas próprias empresas causou um caos global devido à falta de cuidado.<br>
-                                O Global Times também criticou os gigantes da internet que "monopolizam" a indústria: "Confiar exclusivamente nas principais empresas para liderar os esforços de segurança na rede, como alguns países defendem, pode não apenas prejudicar o compartilhamento.<br>
-                            </p>
-                    </div>
-                </div>
-            </div>
-            <div class="text-container-body">
-                <div>
-                    <p>
-                        inclusivo dos resultados de governança, mas também introduzir novos riscos de segurança."
-                    </p>
-                    <p>
-                    A referência ao "compartilhamento" provavelmente alude ao debate sobre propriedade intelectual, já que a China é frequentemente acusada de copiar ou roubar tecnologia ocidental. Pequim insiste que isso não é o caso e defende um mercado global de tecnologia aberto, embora mantenha um controle rigoroso sobre o cenário doméstico.
-                    </p>
-                    <p>  
-                    No entanto, nem tudo na China ficou totalmente imune. Um pequeno número de trabalhadores expressou agradecimento a um gigante do software americano por encerrar sua semana de trabalho mais cedo.
-                    </p>
-                    <p>
-                    "Obrigado, Microsoft, por uma férias antecipada" foi tendência na rede social Weibo na sexta-feira, com usuários postando fotos de telas de erro azul.
-                    </p>
                 </div>
             </div>
         </article>
